<?xml version="1.0" encoding="utf-8"?><!--
  ~ NewsCatchr
  ~ Copyright © 2017 Jan-Lukas Else
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
	<string name="app_name" translatable="false">NewsCatchr</string>
	<string name="about_nc">About NewsCatchr</string>
	<string name="about_nc_desc">View some information about this app</string>
	<string name="loading">Loading…</string>
	<string name="settings">Settings</string>
	<string name="bookmarks">Bookmarks</string>
	<string name="favorites">Favorites</string>
	<string name="about">About</string>
	<string name="news">News</string>
	<string name="readability">Readability</string>
	<string name="prefs_readability">Readability</string>
	<string name="prefs_readability_desc">Always load the article content from the website instead of the feed</string>
	<string name="search_results_for">Search results for</string>
	<string name="suc_import">Import completed successfully!</string>
	<string name="import_failed">Import failed!</string>
	<string name="suc_backup">Backup completed successfully!</string>
	<string name="backup_failed">Backup failed!</string>
	<string name="suc_restore">Restore completed successfully!</string>
	<string name="restore_failed">Restore failed!</string>
	<string name="suc_share">Successfully shared!</string>
	<string name="share_failed">Sharing failed!</string>
	<string name="logged_in_as">Logged in as</string>
	<string name="del_acc_info">Logout</string>
	<string name="pocket" translatable="false">Pocket</string>
	<string name="pocket_sync_title">Pocket synchronization</string>
	<string name="pocket_sync_desc">Synchronize bookmarks with Pocket - and read them from every device.</string>
	<string name="pocket_login">Login to Pocket</string>
	<string name="pocket_logout">Logout from Pocket</string>
	<string name="open_in_browser">Open in browser</string>
	<string name="share">Share</string>
	<string name="what_searching">What are you searching for?</string>
	<string name="custom_tabs_title">In-app browser</string>
	<string name="use_custom_tabs">Use in-app browser if available to open websites faster</string>
	<string name="clear_cache_title">Clear cache</string>
	<string name="clear_cache_desc">Clear everything cached</string>
	<string name="cleared_cache">Cleared cache</string>
	<string name="clear_history_title">Clear history</string>
	<string name="clear_history_desc">Clear feed history</string>
	<string name="cleared_history">Cleared history</string>
	<string name="language">Language</string>
	<string name="backup">Backup</string>
	<string name="restore">Restore</string>
	<string name="import_opml">Import OPML</string>
	<string name="import_opml_hint">Paste the content of the OPML file here</string>
	<string name="pref_import_opml_desc">Import feeds from an OPML file, which you can export from other feed readers like feedly</string>
	<string name="mark_as_bookmark">Mark as bookmark</string>
	<string name="used_libraries">Used code libraries</string>
	<string name="view_all_libraries">View all in this app used libraries</string>
	<string name="used_apis">Used APIs</string>
	<string name="view_all_apis">View alle in this app used APIs</string>
	<string name="general">General</string>
	<string name="refresh">Refresh</string>
	<string name="add_shortcut">Add launcher shortcut</string>
	<string name="shortcut_created">Shortcut created</string>
	<string name="mark_as_favorite">Mark as favorite</string>
	<string name="help">Help</string>
	<string name="advanced">Advanced</string>
	<string name="nothing_found">Nothing found!</string>
	<string name="article_image">Article Image</string>
	<string name="donate">Donate</string>
	<string name="subscribe_support">Subscribe to support the development</string>
	<string name="subscribe_support_desc">Subscribe and make NewsCatchr getting more updates</string>
	<string name="donate_support">Donate to support the development</string>
	<string name="donate_support_desc">Donate (once or more often) and make NewsCatchr getting more updates</string>
	<string name="prefs_amp">Accelerated Mobile Pages</string>
	<string name="prefs_amp_desc">Load an accelerated version of the website</string>
	<string name="share_app">Share NewsCatchr</string>
	<string name="edit_feed_title">Edit title</string>
	<string name="backup_restore">Backup &amp; Restore</string>
	<string name="backup_desc">Backup or restore all favorite feeds, bookmarks and the read state</string>
	<string name="sort">Sort</string>
	<string name="set">Set</string>
	<string name="sync">Synchronization</string>
	<string name="sync_desc">Enable synchronization to automatically download articles in the background</string>
	<string name="sync_now">Synchronize now</string>
	<string name="sync_interval">Synchronization interval</string>
	<string name="prefs_url_shortener">URL Shortener</string>
	<string name="prefs_url_shortener_desc">Shorten URLs before sharing articles.</string>
	<string name="more">More</string>
	<string name="last_feeds">Last feeds</string>
	<string name="recommendations">Recommendations</string>
	<string name="rec_topics">Recommended topics</string>
	<string name="never">Never</string>
	<string name="last_suc_sync">Last successful synchronization</string>
	<string name="newest_first">Newest first</string>
	<string name="oldest_first">Oldest first</string>
	<string name="shared_with_nc">Shared with NewsCatchr ( http://bit.ly/readit-gplay )</string>
	<string name="try_nc">Try NewsCatchr ( http://bit.ly/readit-gplay ), it\'s a really cool newsreader app for
        Android.
    </string>
	<string name="submit_issue">Submit issue</string>
	<string name="restore_key">Restore Key</string>
	<string name="restore_key_desc">You need to copy this key to restore your backup within 30 days.</string>
	<string name="this_is_article">This is an article</string>
	<string name="search_for_feeds">Search for feeds from this website</string>
	<string name="article">Article</string>
	<string name="privacy_policy">Privacy Policy</string>
	<string name="article_tip_zoom">Did you know, that you can adjust the text size by doing a zoom gesture?</string>
	<string name="nothing_bookmarked">Nothing bookmarked yet!</string>
	<string name="nothing_marked_favorite">Nothing marked as favorite yet!</string>
	<string name="show_tutorial">Show tutorial again</string>
	<string name="tutorial_0">Welcome to NewsCatchr! This tutorial will introduce you to the basic things. Click anywhere to continue…</string>
	<string name="tutorial_1">Here you can find the latest news. Select a feed to read it\'s articles. Save your favorite feeds for faster access.</string>
	<string name="tutorial_2">If you save an article, it will be available here.</string>
	<string name="tutorial_3">Change the apps settings to your needs.</string>
	<string name="tutorial_4">Here you can search for feeds. If you want, you can also enter the RSS url here.</string>
	<string name="tutorial_5">Have fun!</string>
	<string name="thanks_purchase">Thanks!</string>
	<string name="thanks_purchase_desc">Thanks for supporting the development of NewsCatchr! You can cancel your subscription anytime on Google Play.</string>
	<string name="show_recent_feeds">Show last feeds</string>
	<string name="show_recommended_feeds">Show feed recommendations</string>
	<string name="on_the_news_page">On the news page</string>
</resources>