<?xml version="1.0" encoding="utf-8"?><!--
  ~ NewsCatchr
  ~ Copyright © 2017 Jan-Lukas Else
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/favorite"
		android:title="@string/mark_as_favorite"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/sort"
		android:icon="@drawable/ic_sort_universal"
		android:title="@string/sort"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/search"
		android:icon="@drawable/ic_search_universal"
		android:title="@android:string/search_go"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/refresh"
		android:icon="@drawable/ic_refresh_universal"
		android:title="@string/refresh"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/edit_title"
		android:title="@string/edit_feed_title"
		app:showAsAction="never"/>
	<item
		android:id="@+id/create_shortcut"
		android:title="@string/add_shortcut"
		app:showAsAction="never"/>

</menu>