<?xml version="1.0" encoding="utf-8"?><!--
  ~ NewsCatchr
  ~ Copyright © 2017 Jan-Lukas Else
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
			android:id="@+id/bookmark"
			android:title="@string/mark_as_bookmark"
			app:showAsAction="ifRoom"/>
	<item
			android:id="@+id/readability"
			android:icon="@drawable/ic_weekend_universal"
			android:title="@string/readability"
			app:showAsAction="ifRoom"/>
	<item
			android:id="@+id/share"
			android:icon="@drawable/ic_share_universal"
			android:title="@string/share"
			app:showAsAction="ifRoom"/>
	<item
			android:id="@+id/browser"
			android:icon="@drawable/ic_language_universal"
			android:title="@string/open_in_browser"
			app:showAsAction="ifRoom"/>
	<item
			android:id="@+id/translate"
			android:title="Translate"
			app:showAsAction="ifRoom"
			android:visible="true"/>

</menu>