<?xml version="1.0" encoding="utf-8"?><!--
  ~ NewsCatchr  Copyright (C) 2016  Jan-Lukas Else
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<tabs>
	<tab
		barColorWhenSelected="@color/bottom_bar_background"
		icon="@drawable/ic_explore"
		id="@+id/bb_news"
		title="@string/news" />
	<tab
		barColorWhenSelected="@color/bottom_bar_background"
		icon="@drawable/ic_bookmark"
		id="@+id/bb_bookmarks"
		title="@string/bookmarks" />
	<tab
		barColorWhenSelected="@color/bottom_bar_background"
		icon="@drawable/ic_settings"
		id="@+id/bb_settings"
		title="@string/settings" />
</tabs>