<?xml version="1.0" encoding="utf-8"?><!--
  ~ NewsCatchr
  ~ Copyright © 2017 Jan-Lukas Else
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/bb_news"
		android:icon="@drawable/ic_explore"
		android:title="@string/news"
		app:showAsAction="ifRoom"/>

	<item
		android:id="@+id/bb_bookmarks"
		android:icon="@drawable/ic_bookmark"
		android:title="@string/bookmarks"
		app:showAsAction="ifRoom"/>

	<item
		android:id="@+id/bb_settings"
		android:icon="@drawable/ic_settings"
		android:title="@string/settings"
		app:showAsAction="ifRoom"/>

</menu>